--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -6,11 +6,11 @@
   "nav": {
     "about": "Обо мне",
     "skills": "Навыки",
-    "education": "Образование"
+    "education": "Образование",
+    "projects": "Проекты"
   },
   "buttons": {
     "contact": "Связаться",
-    "projects": "Мои проекты",
     "resume": "Резюме"
   },
   "about": {
@@ -74,6 +74,20 @@
     }
   },
   "featuredProjects": "Избранные проекты",
+  "projects": {
+    "brainGames": {
+      "title": "BrainGames",
+      "description": "«Игры разума» — набор из пяти консольных игр, построенных по принципу популярных мобильных приложений для прокачки мозга."
+    },
+    "mindScape": {
+      "title": "MindScape",
+      "description": "Веб-приложение для удобного хранения и управления личными заметками прямо в браузере."
+    },
+    "codeAndSpell": {
+      "title": "Code&Spell",
+      "description": "Веб-игра в жанре обучающего симулятора программирования, выполненная в магическом сеттинге: игрок осваивает базовые концепции программирования через интерактивную визуализацию."
+    }
+  },
   "contact": {
     "title": "Давайте работать вместе",
     "subtitle": "Я всегда открыт к новым возможностям и интересным проектам. Свяжитесь со мной, если хотите сотрудничать!",
