resume_ghpages_fix

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -64,6 +64,7 @@
     "hexletDegree": {
       "title": "Fullstack Developer",
       "institution": "Hexlet College • Moscow",
+      "description": "Information Technology and Programming",
       "years": "2023 – 2026"
     },
     "hexletCert": {
