--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -64,6 +64,7 @@
     "hexletDegree": {
       "title": "Fullstack-разработчик",
       "institution": "Hexlet College • Москва",
+      "description": "Информационные технологии и программирование",
       "years": "2023 – 2026"
     },
     "hexletCert": {
